Apply translation memory

--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -757,7 +757,7 @@ msgstr "基礎となる Vert.x メールクライアントの使用"
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:407
 msgid "The Quarkus Mailer is implemented on top of the https://vertx.io/docs/vertx-mail-client/java/[Vert.x Mail Client], providing an asynchronous and non-blocking way to send emails.  If you need fine control on how the mail is sent, for instance if you need to retrieve the message ids, you can inject the underlying client, and use it directly:"
-msgstr ""
+msgstr "Quarkus Mailerは、 link:https://vertx.io/docs/vertx-mail-client/java/[Vert.xメールクライアント] の上に実装されており、非同期でノンブロッキングな方法でメールを送信することができます。メールの送信方法を細かく制御する必要がある場合、例えばメッセージのIDを取得する必要がある場合などの場合は、基礎となるクライアントを注入して直接使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/mailer.adoc:409
