--- a/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-client.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:12
 msgid "This guide explains how to use:"
-msgstr ""
+msgstr "このガイドでは以下の使い方を解説しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:13
@@ -49,7 +49,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:17
 #, no-wrap
 msgid "OidcClient"
-msgstr ""
+msgstr "OidcClient"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:20
@@ -69,7 +69,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:30
 msgid "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus2/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.secret=secret ```"
-msgstr ""
+msgstr "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus2/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.secret=secret ```"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:32
@@ -79,7 +79,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:42
 msgid "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus2/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.secret=secret quarkus.oidc-client.grant.type=password quarkus.oidc-client.grant-options.password.username=alice quarkus.oidc-client.grant-options.password.password=alice ``` In both cases `OidcClient` will auto-discover the token endpoint URL and use it to acquire the tokens."
-msgstr ""
+msgstr "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus2/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.secret=secret quarkus.oidc-client.grant.type=password quarkus.oidc-client.grant-options.password.username=alice quarkus.oidc-client.grant-options.password.password=alice ``` In both cases `OidcClient` will auto-discover the token endpoint URL and use it to acquire the tokens."
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:43
@@ -95,17 +95,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:51
 msgid "``` import javax.inject.PostConstruct; import javax.inject.Inject; import javax.ws.rs.GET;"
-msgstr ""
+msgstr "``` import javax.inject.PostConstruct; import javax.inject.Inject; import javax.ws.rs.GET;"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:54
 msgid "import io.quarkus.oidc.client.OidcClient; import io.quarkus.oidc.client.Tokens;"
-msgstr ""
+msgstr "import io.quarkus.oidc.client.OidcClient; import io.quarkus.oidc.client.Tokens;"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:57
 msgid "@Path(\"/service\")  public class OidcClientResource {"
-msgstr ""
+msgstr "@Path(\"/service\")  public class OidcClientResource {"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:60
@@ -114,12 +114,14 @@ msgid ""
 "    @Inject\n"
 "    OidcClient client;\n"
 msgstr ""
+"    @Inject\n"
+"    OidcClient client;\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:62
 #, no-wrap
 msgid "    volatile Tokens currentTokens;\n"
-msgstr ""
+msgstr "    volatile Tokens currentTokens;\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:67
@@ -130,6 +132,10 @@ msgid ""
 "        currentTokens = client.getTokens().await().indefinitely();\n"
 "    }\n"
 msgstr ""
+"    @PostConstruct\n"
+"    public init() {\n"
+"        currentTokens = client.getTokens().await().indefinitely();\n"
+"    }\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:70
@@ -138,6 +144,8 @@ msgid ""
 "    @GET\n"
 "    public String getResponse() {\n"
 msgstr ""
+"    @GET\n"
+"    public String getResponse() {\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:80
@@ -153,6 +161,15 @@ msgid ""
 "}\n"
 "```\n"
 msgstr ""
+"        Tokens tokens = currentTokens;\n"
+"        if (tokens.isAccessTokenExpired()) {\n"
+"            tokens = client.refreshTokens(tokens.getRefreshToken()).await().indefinitely();\n"
+"            currentTokens = tokens;\n"
+"        } \n"
+"        // use tokens.getAccessToken() to configure MP RestClient Authorization header/etc\n"
+"    }\n"
+"}\n"
+"```\n"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:81
@@ -223,17 +240,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:122
 #, no-wrap
 msgid "Use injected Tokens"
-msgstr ""
+msgstr "注入されたトークンを使用する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:125
 msgid "If you prefer you can use your own custom filter and inject `Tokens`:"
-msgstr ""
+msgstr "ご希望の場合は、独自のカスタムフィルターを使用して、 `Tokens` を注入することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:131
 msgid "``` @Provider @Priority(Priorities.AUTHENTICATION)  @RequestScoped public class OidcClientRequestCustomFilter implements ClientRequestFilter {"
-msgstr ""
+msgstr "``` @Provider @Priority(Priorities.AUTHENTICATION)  @RequestScoped public class OidcClientRequestCustomFilter implements ClientRequestFilter {"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:134
@@ -242,6 +259,8 @@ msgid ""
 "    @Inject\n"
 "    Tokens tokens;\n"
 msgstr ""
+"    @Inject\n"
+"    Tokens tokens;\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:141
@@ -254,11 +273,17 @@ msgid ""
 "}\n"
 "```\n"
 msgstr ""
+"    @Override\n"
+"    public void filter(ClientRequestContext requestContext) throws IOException {\n"
+"        requestContext.getHeaders().add(HttpHeaders.AUTHORIZATION, \"Bearer \" + tokens.getAccessToken());\n"
+"    }\n"
+"}\n"
+"```\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:143
 msgid "The `Tokens` producer will acquire and refresh the tokens and the custom filter will decide how and when to use the token."
-msgstr ""
+msgstr "`Tokens` プロデューサーがトークンを取得して更新し、カスタムフィルターがいつどのようにトークンを使用するかを決定します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:145
@@ -269,7 +294,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:146
 #, no-wrap
 msgid "OidcClients"
-msgstr ""
+msgstr "OidcClients"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:149
@@ -382,7 +407,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:217
 msgid "If you need you can also create new `OidcClient` programmatically like this:"
-msgstr ""
+msgstr "必要であれば、このようにプログラム的に新しい `OidcClient` を作成することもできます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:227
@@ -425,37 +450,37 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:254
 msgid "`OidcClient` has to authenticate to the OpenId Connect Provider for the `client_credentials` and other grant requests to succeed.  All the https://openid.net/specs/openid-connect-core-1_0.html#ClientAuthentication[OIDC Client Authentication] options are supported, for example:"
-msgstr ""
+msgstr "`OidcClient` は、 `client_credentials` やその他のグラントリクエストを成功させるために OpenId Connect Provider に認証する必要があります。 link:https://openid.net/specs/openid-connect-core-1_0.html#ClientAuthentication[OIDC クライアント認証] オプションはすべてサポートされています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:256
 msgid "`client_secret_basic`:"
-msgstr ""
+msgstr "`client_secret_basic` ."
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:262
 msgid "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.secret=mysecret ```"
-msgstr ""
+msgstr "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.secret=mysecret ```"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:264
 msgid "`client_secret_post`:"
-msgstr ""
+msgstr "`client_secret_post`:"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:271
 msgid "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.client-secret.value=mysecret quarkus.oidc-client.credentials.client-secret.method=post ```"
-msgstr ""
+msgstr "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.client-secret.value=mysecret quarkus.oidc-client.credentials.client-secret.method=post ```"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:273
 msgid "`client_secret_jwt`:"
-msgstr ""
+msgstr "`client_secret_jwt`:"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:279
 msgid "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.jwt.secret=AyM1SysPpbyDfgZld3umj1qzKObwVMkoqQ-EstJQLr_T-1qS0gZH75aKtMN3Yj0iPS4hcgUuTwjAzZr1Z9CAow ```"
-msgstr ""
+msgstr "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.jwt.secret=AyM1SysPpbyDfgZld3umj1qzKObwVMkoqQ-EstJQLr_T-1qS0gZH75aKtMN3Yj0iPS4hcgUuTwjAzZr1Z9CAow ```"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:281
@@ -465,7 +490,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:287
 msgid "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.jwt.key-file=privateKey.pem ```"
-msgstr ""
+msgstr "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.jwt.key-file=privateKey.pem ```"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:289
@@ -475,7 +500,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:298
 msgid "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.jwt.key-store-file=keystore.jks quarkus.oidc-client.credentials.jwt.key-store-password=mypassword quarkus.oidc-client.credentials.jwt.key-password=mykeypassword quarkus.oidc-client.credentials.jwt.key-id=mykey ```"
-msgstr ""
+msgstr "``` quarkus.oidc-client.auth-server-url=${keycloak.url}/realms/quarkus/ quarkus.oidc-client.client-id=quarkus-app quarkus.oidc-client.credentials.jwt.key-store-file=keystore.jks quarkus.oidc-client.credentials.jwt.key-store-password=mypassword quarkus.oidc-client.credentials.jwt.key-password=mykeypassword quarkus.oidc-client.credentials.jwt.key-id=mykey ```"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-client.adoc:300
