--- a/l10n/po/ja_JP/_versions/1.7/guides/security-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-authorization.adoc.po
@@ -28,23 +28,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:12
 msgid "Quarkus has an integrated pluggable web security layer. If security is enabled all HTTP requests will have a permission check performed to make sure they are allowed to continue."
-msgstr ""
+msgstr "Quarkusには、プラグイン可能なウェブセキュリティーレイヤーが統合されています。セキュリティーが有効になっている場合、すべてのHTTPリクエストは、処理の継続が許可されているかどうかを確認するためのパーミッションチェックが実行されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:15
 msgid "Configuration authorization checks are executed before any annotation-based authorization check is done, so both checks have to pass for a request to be allowed."
-msgstr ""
+msgstr "設定認可チェックは、アノテーションベースの認可チェックが行われる前に実行されるので、リクエストが許可されるためには両方のチェックを通過しなければなりません。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-authorization.adoc:16
 #, no-wrap
 msgid "Authorization using Configuration"
-msgstr ""
+msgstr "設定を利用した認可"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:20
 msgid "The default implementation allows you to define permissions using config in `application.properties`. An example config is shown below:"
-msgstr ""
+msgstr "デフォルトの実装では、 `application.properties` の 設定を使用してパーミッションを定義することができます。以下に config の例を示します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-authorization.adoc:24
@@ -80,7 +80,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:36
 msgid "This defines a role based policy that allows users with the `user` and `admin` roles. This is referenced by later rules."
-msgstr ""
+msgstr "これは、 `user` と `admin` のロールを持つユーザーを許可するロールベースのポリシーを定義します。これは後のルールで参照されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:37
@@ -272,12 +272,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-authorization.adoc:145
 #, no-wrap
 msgid "Configuration Properties to Deny access"
-msgstr ""
+msgstr "アクセスを拒否する設定プロパティー"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:148
 msgid "There are two configuration settings that alter the RBAC Deny behavior:"
-msgstr ""
+msgstr "RBAC Denyの動作を変更する2つの設定があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:151
@@ -293,12 +293,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-authorization.adoc:156
 #, no-wrap
 msgid "Authorization using Annotations"
-msgstr ""
+msgstr "アノテーションを使った認可"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-authorization.adoc:163
 msgid "Quarkus comes with built-in security to allow for Role-Based Access Control (link:https://en.wikipedia.org/wiki/Role-based_access_control[RBAC])  based on the common security annotations `@RolesAllowed`, `@DenyAll`, `@PermitAll` on REST endpoints and CDI beans.  An example of an endpoint that makes use of both JAX-RS and Common Security annotations to describe and secure its endpoints is given in <<subject-example>>. Quarkus also provides the `io.quarkus.security.Authenticated` annotation that will permit any authenticated user to access the resource (equivalent to `@RolesAllowed(\"**\")`)."
-msgstr ""
+msgstr "Quarkusには、共通のセキュリティーアノテーション( `@RolesAllowed` , `@DenyAll` , `@PermitAll` )に基づいたロールベースのアクセス制御 link:https://en.wikipedia.org/wiki/Role-based_access_control[(RBAC] )をRESTエンドポイントとCDI Bean上で可能にするためのビルトインセキュリティーが搭載されています。JAX-RSとCommon Securityアノテーションの両方を利用してエンドポイントを記述し、セキュリティーを確保するエンドポイントの例は、 link:#subject-example[[subject-example]] に記載されています。Quarkusはまた、認証済みのユーザーがリソースにアクセスすることを許可する `io.quarkus.security.Authenticated` アノテーションも提供しています( `@RolesAllowed(\"**\")` と同等です)。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/security-authorization.adoc:165
