--- a/l10n/po/ja_JP/_versions/1.7/guides/sending-emails.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/sending-emails.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:11
 msgid "This guide demonstrates how your Quarkus application can send emails using an SMTP server."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがSMTPサーバーを使用して電子メールを送信する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/sending-emails.adoc:12
@@ -49,7 +49,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:18
 msgid "The SMTP hostname, port and credentials, and an email address"
-msgstr ""
+msgstr "SMTPホスト名、ポート、資格情報、および電子メール アドレス"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:19
@@ -80,7 +80,7 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:27
 msgid "In this guide, we are going to see how you can send emails from a Quarkus application.  It covers simple emails, attachments, inlined attachments, the reactive and imperative APIs..."
-msgstr ""
+msgstr "このガイドでは、Quarkusアプリケーションからメールを送信する方法を見ていきます。シンプルな電子メール、添付ファイル、インラインの添付ファイル、リアクティブ型と命令型のAPIをカバーしています。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/sending-emails.adoc:28
@@ -91,7 +91,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:31
 msgid "Create a new project with the following command:"
-msgstr ""
+msgstr "以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:38
@@ -106,7 +106,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:41
 msgid "If you already have an existing project, add the `mailer` extension:"
-msgstr ""
+msgstr "既存のプロジェクトがある場合は、 `mailer` エクステンションを追加してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:45
@@ -118,7 +118,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/sending-emails.adoc:47
 #, no-wrap
 msgid "Configuring the mailer"
-msgstr ""
+msgstr "メーラーの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:51
@@ -145,13 +145,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:66
 msgid "For more information about the Mailer extension configuration please refer to the <<configuration-reference, Configuration Reference>>."
-msgstr ""
+msgstr "メーラーエクステンション設定の詳細については、 link:#configuration-reference[設定リファレンス] を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/sending-emails.adoc:67
 #, no-wrap
 msgid "Sending simple emails"
-msgstr ""
+msgstr "簡単なメールの送信"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:70
@@ -177,7 +177,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:81
 msgid "There are 2 APIs:"
-msgstr ""
+msgstr "APIは2つあります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:83
@@ -272,7 +272,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/sending-emails.adoc:136
 #, no-wrap
 msgid "Sending attachments"
-msgstr ""
+msgstr "添付ファイルの送信"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:139
@@ -297,13 +297,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:154
 msgid "Attachments can be created from raw bytes (as shown in the snippet) or files."
-msgstr ""
+msgstr "添付ファイルは、(スニペットに示すように)生のバイトから作成することも、ファイルから作成することもできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/sending-emails.adoc:155
 #, no-wrap
 msgid "Sending HTML emails with inlined attachments"
-msgstr ""
+msgstr "インラインの添付ファイル付きのHTMLメールの送信"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:159
@@ -337,7 +337,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/sending-emails.adoc:181
 #, no-wrap
 msgid "Testing email sending"
-msgstr ""
+msgstr "メール送信のテスト"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:186
@@ -426,17 +426,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:229
 msgid "If you want to use the Gmail SMTP server, first create a dedicated password in `Google Account > Security > App passwords` or go to https://myaccount.google.com/apppasswords."
-msgstr ""
+msgstr "GmailのSMTPサーバーを利用する場合は、まず、 `Google Account > Security > App passwords` で専用のパスワードを作成するか、 https://myaccount.google.com/apppasswords に行きます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:231
 msgid "When done, you can configure your Quarkus application by adding the following properties to your `application.properties`:"
-msgstr ""
+msgstr "完了したら、 `application.properties` .Quarkusアプリケーションに以下のプロパティーを追加して、Quarkusアプリケーションを設定することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:233
 msgid "With TLS:"
-msgstr ""
+msgstr "TLSを利用する場合"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:242
@@ -453,7 +453,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:245
 msgid "Or with SSL:"
-msgstr ""
+msgstr "SSLを利用する場合"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:254
@@ -471,7 +471,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/sending-emails.adoc:256
 #, no-wrap
 msgid "Using SSL with native executables"
-msgstr ""
+msgstr "ネイティブ実行ファイルでSSLを使用する場合"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:260
@@ -487,7 +487,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:265
 msgid "The Quarkus Mailer is implemented on top of the https://vertx.io/docs/vertx-mail-client/java/[Vert.x Mail Client], providing an asynchronous and non-blocking way to send emails.  If you need fine control on how the mail is sent, for instance if you need to retrieve the message ids, you can inject the underlying client, and use it directly:"
-msgstr ""
+msgstr "Quarkus Mailerは、 link:https://vertx.io/docs/vertx-mail-client/java/[Vert.xメールクライアント] の上に実装されており、非同期でノンブロッキングな方法でメールを送信することができます。メールの送信方法を細かく制御する必要がある場合、例えばメッセージのIDを取得する必要がある場合などの場合は、基礎となるクライアントを注入して直接使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:269
@@ -498,22 +498,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:272
 msgid "Three API flavors are exposed:"
-msgstr ""
+msgstr "3つのAPIフレーバーが公開されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:274
 msgid "the Axle client (`io.vertx.axle.ext.mail.MailClient`), using `CompletionStage` and Reactive Streams `Publisher`"
-msgstr ""
+msgstr "`CompletionStage` と Reactive Streams を使用する `Publisher`Axle クライアント ( `io.vertx.axle.ext.mail.MailClient` )"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:275
 msgid "the RX Java 2 client (`io.vertx.reactivex.ext.mail.MailClient`)"
-msgstr ""
+msgstr "RX Java 2 クライアント ( `io.vertx.reactivex.ext.mail.MailClient` )"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:276
 msgid "the bare client (`io.vertx.ext.mail.MailClient`)"
-msgstr ""
+msgstr "ベアクライアント ( `io.vertx.ext.mail.MailClient` )"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:278
@@ -540,4 +540,4 @@ msgstr ""
 #: upstream/_versions/1.7/guides/sending-emails.adoc:289
 #, no-wrap
 msgid "Mailer Configuration Reference"
-msgstr ""
+msgstr "メーラー設定リファレンス"
