--- a/l10n/po/ja_JP/_versions/1.7/guides/jms.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/jms.adoc.po
@@ -634,7 +634,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/jms.adoc:361
 msgid "Create a new project with the following command:"
-msgstr ""
+msgstr "以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/jms.adoc:369
