--- a/l10n/po/ja_JP/_versions/1.7/guides/topic/community.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/topic/community.adoc.po
@@ -55,7 +55,7 @@ msgstr "ドキュメント"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:14
 msgid "We have a lot of documentation, be sure to check link:{quarkus-site-getting-started}[our getting started] page and all our link:/guides/[guides].  + Also check out our link:/faq[FAQ] section and https://www.youtube.com/playlist?list=PLsM3ZE5tGAVbMz1LJqc8L5LpnfxPPKloO[Quarkus Tips Playlist]."
-msgstr ""
+msgstr "多くのドキュメントがありますので、 link:{quarkus-site-getting-started}[スタート] ページやすべての link:/guides/[ガイド] をご確認ください。+ また、 link:/faq[FAQ] セクションと link:https://www.youtube.com/playlist?list=PLsM3ZE5tGAVbMz1LJqc8L5LpnfxPPKloO[Quarkus Tipsプレイリスト] もご覧ください。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/topic/community.adoc:15
@@ -72,7 +72,7 @@ msgstr "Stack Overflow"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:20
 msgid "Ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]. + After the documentation, probably the best place to look for answers. We actively monitor the https://stackoverflow.com/questions/tagged/quarkus[quarkus tag]."
-msgstr ""
+msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問をしてみましょう。+ ドキュメントの後に、おそらく答えを探すのに最適な場所です。 link:https://stackoverflow.com/questions/tagged/quarkus[quarkusタグ] を積極的に監視しています。"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/topic/community.adoc:21
@@ -83,7 +83,7 @@ msgstr "メーリングリスト"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:23
 msgid "You can also ask questions on our mailing list. Join the Google group via email {quarkus-mailing-list-subscription-email} or by visiting the Google Groups page {quarkus-mailing-list-index}."
-msgstr ""
+msgstr "また、メーリングリストで質問をすることもできます。Google グループに参加するには、電子メール {quarkus-mailing-list-subcription-email} または Google グループページ {quarkus-mailing-list-index} から参加してください。"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/topic/community.adoc:24
@@ -127,7 +127,7 @@ msgstr "コードと課題管理システム"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:39
 msgid "The source code is hosted on {quarkus-base-url}[GitHub]. If you need to report a bug or request a new feature, look for a similar one on our {quarkus-issues-url}[github issues tracker]. If you don’t find any, create a new issue."
-msgstr ""
+msgstr "ソースコードは{quarkus-base-url}[GitHub]でホストされています。バグの報告や新機能のリクエストが必要な場合は、{quarkus-issues-url}[github issues tracker] で同様のものを探してください。もし見つからなければ、新しい課題を作成してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/topic/community.adoc:41
