--- a/l10n/po/ja_JP/_versions/1.11/guides/transaction.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/transaction.adoc.po
@@ -332,12 +332,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/transaction.adoc:179
 #, no-wrap
 msgid "Configuring the transaction timeout"
-msgstr ""
+msgstr "トランザクションタイムアウトの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/transaction.adoc:181
 msgid "You can configure the default transaction timeout, the timeout that applies to all transactions managed by the transaction manager, via the property `quarkus.transaction-manager.default-transaction-timeout`, specified as a duration."
-msgstr ""
+msgstr "デフォルトのトランザクション・タイムアウト、つまりトランザクション・マネージャーによって管理されるすべてのトランザクションに適用されるタイムアウトを、プロパティー `quarkus.transaction-manager.default-transaction-timeout` を使用して、期間として指定して構成することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/transaction.adoc:185
@@ -353,7 +353,7 @@ msgstr "トランザクションノード名識別子の設定"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/transaction.adoc:190
 msgid "Narayana, as the underlying transaction manager, has a concept of a unique node identifier.  This is important if you consider using XA transactions that involve multiple resources."
-msgstr ""
+msgstr "Narayanaは、基礎となるトランザクションマネージャーであり、一意のノード識別子の概念を持っています。これは、複数のリソースを含む XA トランザクションの使用を検討している場合に重要です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/transaction.adoc:196
@@ -380,7 +380,7 @@ msgstr "なぜ常にトランザクションマネージャーを持っている
 #: upstream/_versions/1.11/guides/transaction.adoc:204
 #, no-wrap
 msgid "Does it work everywhere I want to?"
-msgstr ""
+msgstr "使いたいところなら、どこでも使えるのでしょうか？"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/transaction.adoc:211
