--- a/l10n/po/ja_JP/_versions/1.7/guides/index2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/index2.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/index2.adoc:3
 #, no-wrap
 msgid "{project-name}"
-msgstr ""
+msgstr "{project-name}"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/index2.adoc:7
@@ -57,7 +57,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/index2.adoc:15
 #, no-wrap
 msgid "Other guides"
-msgstr ""
+msgstr "その他のガイド"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/index2.adoc:18
