--- a/l10n/po/ja_JP/_versions/1.7/guides/security-ldap.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-ldap.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:11
 msgid "This guide demonstrates how your Quarkus application can use an LDAP server to authenticate and authorize your user identities."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがLDAPサーバーを使用してユーザーアイデンティティを認証・認可する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-ldap.adoc:13
@@ -110,7 +110,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:42
 msgid "The solution is located in the `security-ldap-quickstart` {quickstarts-tree-url}/security-ldap-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `security-ldap-quickstart` {quickstarts-tree-url}/security-ldap-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-ldap.adoc:43
@@ -347,7 +347,7 @@ msgstr "アプリケーションのテスト"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:182
 msgid "The application is now protected and the identities are provided by our LDAP server.  The very first thing to check is to ensure the anonymous access works."
-msgstr ""
+msgstr "アプリケーションは保護され、アイデンティティはLDAPサーバーによって提供されるようになりました。まず最初に確認すべきことは、匿名アクセスが機能することを確認することです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-ldap.adoc:189
@@ -469,7 +469,7 @@ msgstr "参照"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:249
 msgid "https://en.wikipedia.org/wiki/Lightweight_Directory_Access_Protocol[LDAP]"
-msgstr ""
+msgstr "https://en.wikipedia.org/wiki/Lightweight_Directory_Access_Protocol[LDAP]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:249
