--- a/l10n/po/ja_JP/_versions/1.7/guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/mailer.adoc.po
@@ -144,7 +144,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mailer.adoc:64
 msgid "Here is an example using _sendgrid_:"
-msgstr ""
+msgstr "ここでは _sendgridを_ 使用した例を示します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:74
