--- a/l10n/po/ja_JP/_versions/1.7/guides/sending-emails.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/sending-emails.adoc.po
@@ -128,7 +128,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:53
 msgid "Here is an example using _sendgrid_:"
-msgstr ""
+msgstr "ここでは _sendgridを_ 使用した例を示します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/sending-emails.adoc:62
