Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
@@ -1258,7 +1258,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:652
 #, no-wrap
 msgid "Metrics"
-msgstr ""
+msgstr "メトリクス"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:657
