--- a/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
@@ -482,7 +482,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:226
 msgid "A sample configuration should look like this:"
-msgstr ""
+msgstr "設定のサンプルは以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mongodb.adoc:231
@@ -1124,7 +1124,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/mongodb.adoc:591
 #, no-wrap
 msgid "Metrics"
-msgstr ""
+msgstr "メトリクス"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:595
