--- a/l10n/po/ja_JP/_versions/1.7/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/elasticsearch.adoc.po
@@ -486,7 +486,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/elasticsearch.adoc:248
 msgid "A sample configuration should look like this:"
-msgstr ""
+msgstr "設定のサンプルは以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/elasticsearch.adoc:253
