--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
@@ -902,7 +902,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:479
 #, no-wrap
 msgid "Metrics"
-msgstr ""
+msgstr "メトリクス"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:483
