--- a/l10n/po/ja_JP/_data/guides.yaml.po
+++ b/l10n/po/ja_JP/_data/guides.yaml.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-03 19:12+0000\n"
-"PO-Revision-Date: 2021-02-07 21:49+0900\n"
+"PO-Revision-Date: 2021-03-25 22:31+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -102,23 +102,22 @@ msgstr "/guides/tooling"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
-#, fuzzy, no-wrap
-#| msgid "Learn more about Quarkus class loading infrastructure."
+#, no-wrap
 msgid "Learn more about Quarkus integrations in IDEs."
-msgstr "Quarkusクラスのローディングインフラストラクチャについてはこちらをご覧ください。"
+msgstr "IDEのQuarkus統合についてはこちらをご覧ください。"
 
 #. type: Hash Value - Key: title
 #: >categories>>guides>
 #, no-wrap
 msgid "Quarkus Tools in your favorite IDE"
-msgstr ""
+msgstr "お好みのIDEのQuarkus Tools"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "/guides/tooling"
 msgid "/guides/ide-tooling"
-msgstr "/guides/tooling"
+msgstr "/guides/ide-tooling"
 
 #. type: Hash Value - Key: cat-id
 #: >categories>
