--- a/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
@@ -3,45 +3,42 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-23 11:07+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-25 22:25+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/elasticsearch.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Connecting to an Elasticsearch cluster"
 msgstr "Quarkus - Elasticsearchクラスターへの接続"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:11
-#, fuzzy
 msgid "Elasticsearch is a well known full text search engine and NoSQL datastore."
-msgstr "Elasticsearchはよく知られた全文検索エンジンであり、NoSQLデータストアである。"
+msgstr "Elasticsearchはよく知られた全文検索エンジンであり、NoSQLデータストアです。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:13
-#, fuzzy
 msgid "In this guide, we will see how you can get your REST services to use an Elasticsearch cluster."
-msgstr "このガイドでは、RESTサービスにElasticsearchクラスターを使用させる方法を見ていきます。"
+msgstr "このガイドでは、RESTサービスでElasticsearchクラスターを使用する方法を見ていきます。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:16
-#, fuzzy
 msgid "Quarkus provides two ways of accessing Elasticsearch: via the lower level `RestClient` or via the `RestHighLevelClient` we will call them the low level and the high level clients."
-msgstr "QuarkusはElasticsearchにアクセスするための2つの方法を提供しています:低レベルの `RestClient` を経由して、または `RestHighLevelClient` を経由して、低レベルと高レベルのクライアントと呼ぶことにします。"
+msgstr "QuarkusはElasticsearchにアクセスするための2つの方法を提供しています:低レベルの `RestClient` 経由、または `RestHighLevelClient` 経由であり、低レベルと高レベルのクライアントと呼びます。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch.adoc:19
@@ -76,9 +73,8 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:28
-#, fuzzy
 msgid "Elasticsearch installed or Docker installed"
-msgstr "Elasticsearchがインストールされているか、Dockerがインストールされているか"
+msgstr "Elasticsearchがインストールされているか、Dockerがインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch.adoc:29
@@ -93,7 +89,6 @@ msgstr "このガイドで構築されたアプリケーションは非常にシ
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:34
-#, fuzzy
 msgid "All the information between the browser and the server is formatted as JSON."
 msgstr "ブラウザとサーバー間の情報はすべてJSON形式になっています。"
 
@@ -497,7 +492,7 @@ msgstr "実装はとても簡単で、JAX-RSのアノテーションを使って
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch.adoc:242
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring Elasticsearch"
 msgstr "Elasticsearchの設定"
 
@@ -651,7 +646,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch.adoc:323
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating a frontend"
 msgstr "フロントエンドの作成"
 
